TAG: genmapload-6-0-1-1
DATE: 11/30/2015
STAFF: dbm
CHANGES: TR11904 & TR12199
1) genmapload.config.default: Don't mail curator log to mgiadmin

TAG: genmapload-6-0-0-1
DATE: 7/23/15
STAFF: pf
CHANGES: postgres conversion release tag

TAG: genmapload-tr11750-MP
DATE: 06/29/2015
STAFF: kstone

TAG: genmapload-tr11750-BP
DATE: 06/03/2015
STAFF: kstone

TAG: genmapload-5-1-7-1
DATE: 01/28/2014
STAFF: lec
CHANGES:
1) TR11584/media wiki change

TAG: genmapload-5-1-1-1
DATE: 11/06/2012
STAFF: dbm
CHANGES:
C4AM/B38 release

TAG: genmapload-5-1-0-1
DATE: 10/19/2012
STAFF: dbm
CHANGES:
1) TR11163: Config changes

TAG: genmapload-tr7106-BP
DATE: 08/27/2012
STAFF: jsb
CHANGES:
1) changed cM to syntenic for mismatch of genetic and genomic chromosomes

TAG: genmapload-4-4-1-5
TAG: genmapload-4-4-1-4
TAG: genmapload-4-4-1-3
DATE: 03/10/2011
STAFF: lec
CHANGES:
1) TR10622/ignore DNA segments

TAG: genmapload-4-4-1-2
TAG: genmapload-4-4-1-1
DATE: 02/27/2011, 03/02/2011
STAFF: lec
CHANGES:
1) TR10607/makeMGIMapFile.py
2) changed MRK_Offset.txt to MRK_Offset.bcp for consistency

TAG: genmapload-4-3-5-10
DATE: 11/16/2010
STAFF: lec
CHANGES:
1) fix bad substitution error in bin/genmapload.sh/echo

TAG: genmapload-4-3-5-9
TAG: genmapload-4-3-5-8
TAG: genmapload-4-3-5-7
TAG: genmapload-4-3-5-6
TAG: genmapload-4-3-5-5
TAG: genmapload-4-3-5-4
TAG: genmapload-4-3-5-3
TAG: genmapload-4-3-5-2
TAG: genmapload-4-3-5-1
DATE: 07/08/2010
STAFF: lec
CHANGES:
1) TR 9316/genmapload
