@@ -1,3 +1,10 @@
+TAG: genmapload-6-0-4-1
+DATE: 04/29/2016
+STAFF: lec
+CHANGES: TR12069/postgres cleanup
+1) convert to Git
+2) add "db.setAutoTranslate"
+
 TAG: genmapload-6-0-1-1
 DATE: 11/30/2015
 STAFF: dbm
